apps/actual-budget/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual-budget
  namespace: apps
spec:
  parentRefs:
    - name: home
      namespace: traefik
  hostnames:
    - budget.reza.network
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: custom-errors
      backendRefs:
        - name: actual-budget
          port: 5006
